# Numerical-methods-tests

semester_2/test_2/: .task_1_fpi.txt.swp  CMakeLists.txt  task_1.cpp  task_1_Newton.cpp  task_1_Newton.txt  task_1_fpi.txt  task_2.cpp  task_2.txt
semester_2/test_2/task_1/: CMakeLists.txt  task_1_Newton.cpp  task_1_fpi.cpp
semester_2/test_2/task_2/: .task_2.cpp.swp  CMakeLists.txt  task_2.cpp
semester_2/test_2/task_3/: CMakeLists.txt  task_3.cpp
semester_2/test_2/task_4/: CMakeLists.txt  task_4.cpp
